# checked-delete-cascade

./: .gitignore  README.md  checked-delete-cascade.cabal  stack.yaml
src/: Lib.hs
src/Database/Persist/Delete/: Indexed.hs
src/Database/Persist/Delete/Indexed/: TH.hs
src/Database/Persist/Delete/Indexed/TH/: Internal.hs
test/: Spec.hs
test/Entities/: District.hs  School.hs  Teacher.hs
