name:                checked-delete-cascade
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/pseudonom/checked-delete-cascade#readme
license:             MIT
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
copyright:           2016 Eric Easley
category:            database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.Persist.Delete.Indexed
                     , Database.Persist.Delete.Indexed.TH
                     , Database.Persist.Delete.Indexed.TH.Internal
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , indexedt
                     , persistent
                     , persistent-template
                     , template-haskell
                     , text
                     , transformers
  default-language:    Haskell2010
  default-extensions:  DataKinds
                       FlexibleContexts
                       FunctionalDependencies
                       KindSignatures
                       MultiParamTypeClasses
                       TemplateHaskell
                       TupleSections
                       TypeFamilies
                       TypeOperators

test-suite checked-delete-cascade-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Entities.District
                       Entities.School
                       Entities.Teacher
  build-depends:       base
                     , bytestring
                     , checked-delete-cascade
                     , fast-logger
                     , hspec
                     , indexedt
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , resourcet
                     , text
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:
                       DataKinds
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       MultiParamTypeClasses
                       OverloadedStrings
                       QuasiQuotes
                       RankNTypes
                       ScopedTypeVariables
                       TemplateHaskell
                       TypeFamilies

source-repository head
  type:     git
  location: https://github.com/pseudonom/checked-delete-cascade
